--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,7 @@
     "express": "^5.1.0",
     "lowdb": "^7.0.1",
     "multer": "^2.0.2",
-    "nanoid": "^5.1.6",
-    "nodemailer": "^7.0.10"
+    "nanoid": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
